--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -107,7 +107,7 @@ a{
 	color: $black;
 	display: inline-block;
 	span{
-		text-align: right;
+		// text-align: right;
 		display: block;
 		margin-bottom: 12px;
 	}
