--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -7,6 +7,14 @@
 .project-page{
 	font-family: 'TitlingGothicFB light';
 	background-color: $gray;
+	padding: 0;
+	.project-title{
+		font-size: 22px;
+		font-family: 'Nocturne Serif ExtraBold';
+		@media(min-width: 768px){
+			font-size: 30px;
+		}
+	}
 }
 section.project-about{
 	background-color: $orange;
@@ -18,10 +26,13 @@ section.project-about{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	&:after{
+	}
 	@media(min-width: 768px){
-		padding: 240px 0;
-		height: 761px;
-		padding: 0 5px;
+		padding: 240px 0 0;
+		height: 525px;
+		margin-bottom: 10px;
+		// padding: 0 5px;
 	}
 	.info-wrapper{
 		text-align: center;
@@ -47,9 +58,6 @@ section.project-about{
 			transform: translate(-50%, -50%)
 		}
 		@media(min-width: 768px){
-			h1{
-				font-size: 30px;
-			}
 			h2{
 				width: 50%;
 				margin-left: 25%;
@@ -81,17 +89,20 @@ section.project-about{
 		}
 		@media(min-width: 768px){
 			background-color: transparent;
-			padding: 0;
+			padding: 108px $snj-grid__gutterHalfWidth 0px;
 			transform: translateY(0);
 			display: flex;
 			flex-direction: row;
 			.especific-item{
 				width: 16.66%;
-				padding: 20px 5px;
+				padding: 20px 15px;
 				&:nth-child(2){
 					width: 33.33%;
 					margin-left: 16.66%;
 					margin-right: 16.66%;
+				}
+				&:after{
+					left: 5px;
 				}
 			}
 		}
@@ -101,42 +112,71 @@ section.project-description{
 	background-color: $gray;
 	width: 100%;
 	padding:206px 10px 30px;
-	h1{
+	.project-title{
 		margin-top: 28px;
 		margin-bottom: 28px;
 	}
 	p{
 		margin-bottom: 20px;
 	}
+	@media(min-width: 768px){
+		background-color: #a2a7a3;
+		padding-top: 65px;
+		padding-bottom: 128px;
+		margin-bottom: 10px;
+		.project-title{
+			margin-top: 50px;
+			margin-bottom: 50px;
+		}
+		div{
+			width: 50%;
+			display: inline-block;
+			float: left;
+			.paragraph-left{
+				padding-right: 5px;
+			}
+			.paragraph-next{
+				padding-left: 5px;
+			}
+		}
+	}
 }
-img[class*="p-photo"]{
-	background-repeat: no-repeat;
-	background-size: cover;
+.img-wrapper{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	@media(min-width: 768px){
+		flex-direction: row;
+	}
+}
+.p-photo1{
+	height:525px;
+	width: 100%;
+}
+.p-photo2{
+	height: 220px;
+}
+.p-photo3{
+	height: 220px;
+}
+
+[class*="p-photo"]{
+	overflow: hidden;
+	img{
+		width: 100%;
+	}
 	&:nth-child(odd){
 		margin-bottom: 20px;
 	}
-}
+	@media(min-width: 768px){
+		height: 525px;
+	}
 
-.p-photo1{
-	background-image: url("../img/project-img-1.jpg");
-	height:525px;
-	background-position: 16% center;
 }
-.p-photo2{
-	background-image: url("../img/project-img-2.jpg");
-	height: 220px;
-	background-position: center;
-}
-.p-photo3{
-	background-image: url("../img/project-img-3.jpg");
-	height: 220px;
-	background-position: center;
-}
-
 section.sliderwrapper{
 	height: 390px;
 	width: 100%;
-	background-color: $black;
+	// background-color: $black;
 	position: relative;
 	margin-bottom: 20px;
 	button.slide-controller{
@@ -172,6 +212,36 @@ section.sliderwrapper{
 	.slide-item-1{
 		background-image: url("../img/project-img-4.jpg")
 	}
+	@media(min-width: 768px){
+		height: 525px;
+		margin-bottom: 10px;
+		// padding-top: 66px;
+		// padding-bottom: 66px;
+		button.slide-controller{
+			width: 8.333333%;
+			text-align: center;
+			background-color: transparent;
+			color: $dark-brown;
+			border: none;
+		&.controller-prev{
+			left: calc(16.666667% + 10px)
+		}
+		&.controller-next{
+			right: calc(16.666667% + 10px)
+			}
+		}
+		.slider-hidden{
+			height: 394px;
+			top: 50%;
+			transform: translateY(-50%);
+			[class*="slide-item"]{
+				width: 50%;
+				margin-left: 4.166666%;
+				margin-right: 4.166666%;
+				background-color: red;
+			}
+		}
+	}
 }
 section.video-wrapper{
 	height: 300px;
@@ -183,6 +253,11 @@ section.video-wrapper{
 	background-size: cover;
 	background-position: center;
 	margin-bottom: 20px;
+	video{
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 	button{
 		display: block;
 		margin: 0 auto;
@@ -194,18 +269,29 @@ section.video-wrapper{
 			}
 		}
 	}
+	@media(min-width: 768px){
+		height: 525px;
+		margin-bottom: 10px;
+	}
 }
 section.footer-project{
 	width: 100%;
 	height: 307px;
-	padding: 78px 0 20px;
+	padding-top: 78px;
+	padding-bottom: 20px;
 	color: $dark-orange;
 	background-color: $orange;
 	font-family: 'TitlingGothicFB Standar';
 	text-align: center;
 	position: relative;
+	@media(min-width: 768px){
+		height: 525px;
+	}
 	a.arrow-up{
 		display: none;
+		@media(min-width: 768px){
+			display: block;
+		}
 	}
 	h3{
 		font-family: 'Nocturne Serif ExtraBold';
@@ -225,5 +311,46 @@ section.footer-project{
 		display: block;
 		margin: 0 auto;
 		width: 100%;
+		@media(min-width: 768px){
+			bottom: 40px;
+		}
+	}
+}
+
+.arrow-container{
+	display: flex;
+	flex-direction: row;
+}
+a.arrow-up{
+	.arrow-wrapper{
+		background: red;
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		width: 110px;
+		cursor: pointer;
+		align-items: center;
+		.rectangle-arrow{
+			display: inline-block;
+			height: 2px;
+			width: 81.99px;
+			margin-right: 1px;
+			background: #ffecd0;
+		}
+	}
+	&.prev-case{
+		text-align: left;
+		.arrow-wrapper{
+			justify-content: flex-start;
+			.icon-arrow{
+				transform: rotate(180deg);
+			}
+		}
+	}
+	&.next-case{
+		text-align: right;
+		.arrow-wrapper{
+			justify-content: flex-end;
+		}
 	}
 }
